--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
   - pytorch
 dependencies:
   - python=3.8.10
+  - pandas=1.4.1
   - numpy=1.19.0
   - scipy=1.6.2
   - scikit-learn=0.24.2
