--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - pip:
     - sentencepiece
     - mne
+    - jupyter_contrib_nbextensions
     - biosppy
     - sacrebleu
     - nltk
