--- a/environment.yml
+++ b/environment.yml
@@ -13,19 +13,20 @@ dependencies:
   - tqdm=4.59.0
   - docopt=0.6.2
   - notebook
+  - xgboost
   - pip=21.1.2
   - pip:
-    - tensorflow
-    - sentencepiece
-    - shap
-    - mne
-    - jupyter_contrib_nbextensions
-    - biosppy
-    - sacrebleu
-    - nltk
-    - timeout_decorator
-    - "--find-links https://download.pytorch.org/whl/torch_stable.html"
-    - torch==1.10.0; sys_platform != "linux" and sys_platform != "win32"
-    - torchvision==0.11.1; sys_platform != "linux" and sys_platform != "win32"
-    - torch==1.10.0+cpu; sys_platform == "linux" or sys_platform == "win32"
-    - torchvision==0.11.1+cpu; sys_platform == "linux" or sys_platform == "win32"
+      - tensorflow
+      - sentencepiece
+      - shap
+      - mne
+      - jupyter_contrib_nbextensions
+      - biosppy
+      - sacrebleu
+      - nltk
+      - timeout_decorator
+      - '--find-links https://download.pytorch.org/whl/torch_stable.html'
+      - torch==1.10.0; sys_platform != "linux" and sys_platform != "win32"
+      - torchvision==0.11.1; sys_platform != "linux" and sys_platform != "win32"
+      - torch==1.10.0+cpu; sys_platform == "linux" or sys_platform == "win32"
+      - torchvision==0.11.1+cpu; sys_platform == "linux" or sys_platform == "win32"
