--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - python=3.8.10
   - pandas=1.4.1
-  - numpy=1.19.0
+  - numpy=1.20.0
   - scipy=1.6.2
   - scikit-learn=0.24.2
   - matplotlib=3.3.4
@@ -15,6 +15,7 @@ dependencies:
   - notebook
   - xgboost
   - seaborn
+  - shap
   - pip=21.1.2
   - pip:
       - tensorflow
