--- a/environment.yml
+++ b/environment.yml
@@ -4,12 +4,13 @@ channels:
   - conda-forge
   - pytorch
 dependencies:
+  - openblas
   - python=3.8.10
   - pandas=1.4.1
-  - numpy=1.20.0
-  - scipy=1.6.2
-  - scikit-learn=0.24.2
-  - matplotlib=3.3.4
+  - numpy=1.24.3
+  - scipy
+  - scikit-learn
+  - matplotlib
   - tqdm=4.59.0
   - docopt=0.6.2
   - notebook
@@ -18,20 +19,14 @@ dependencies:
   - shap
   - umap-learn
   - pip=21.1.2
-  - plotly=5.11.0
+  - plotly
   - python-kaleido
   - pip:
-      - tensorflow
+      - mat73
       - sentencepiece
-      - shap
       - mne
       - jupyter_contrib_nbextensions
       - biosppy
       - sacrebleu
       - nltk
       - timeout_decorator
-      - '--find-links https://download.pytorch.org/whl/torch_stable.html'
-      - torch==1.10.0; sys_platform != "linux" and sys_platform != "win32"
-      - torchvision==0.11.1; sys_platform != "linux" and sys_platform != "win32"
-      - torch==1.10.0+cpu; sys_platform == "linux" or sys_platform == "win32"
-      - torchvision==0.11.1+cpu; sys_platform == "linux" or sys_platform == "win32"
